--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -3,9 +3,26 @@
     <ion-title>
       About
     </ion-title>
+    <ion-buttons end>
+      <button (click) = "startScanning()" >Scan</button>
+    </ion-buttons>
   </ion-navbar>
+  
 </ion-header>
 
-<ion-content padding>
 
+
+
+<ion-content padding>
+  <ion-list inset>
+    <ion-item-sliding *ngFor="#device of devices" #slidingItem>
+    <button ion-item (click)="connectToDevice(device)">
+      <h2>{{device.name}}</h2>
+      <p>{{device.id}}</p>
+      <p>{{device.rssi}}</p>
+    </button>
+
+    </ion-item-sliding>
+  </ion-list>
+  <ion-spinner *ngIf="isScanning==true" name="circles"></ion-spinner>
 </ion-content>
